# UrCollegeCourse

./: alembic.ini  main.py  models.py  pyproject.toml  readme.md  requirements.txt
alembic/: env.py
api/: courses.py  models.py  sections.py  users.py
api/utils/: courses.py  users.py
books-api/: main.py
db/: dbsetup.py
db/models/: courses.py  mixins.py  users.py
pydantic_schemas/: user.py
