[tool.poetry]
name = "fastapi-projects"
version = "0.1.0"
description = "CRUD FastAPI"
authors = ["jamestitus299 <titusjames299@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
